force-app/main/default/objects/AiTagValue_Home__dll/fields/IsFallbackSystemOnly__c.field-meta.xml
<CustomField>
    <fullName>IsFallbackSystemOnly__c</fullName>
    <label>IsFallbackSystemOnly</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsFallbackSystemOnly</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>