force-app/main/default/objects/AiTagValue_Home__dll/fields/IsFallbackTransformed__c.field-meta.xml
<CustomField>
    <fullName>IsFallbackTransformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFallbackTransformed</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsFallbackTransformed</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>