force-app/main/default/objects/AiTagValue_Home__dll/fields/PrimaryAiTagDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAiTagDefinitionId__c</fullName>
    <label>PrimaryAiTagDefinition</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PrimaryAiTagDefinitionId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>